# cui-commander

./: .gitignore  LICENSE  README.md
docs/: c3pao-audit-what-actually-happens.md  cmmc-level-1-pass-requirements.md  cmmc-level-2-pass-requirements.md  cmmc-level-3-pass-requirements.md  cmmc-pass-requirements-index.md  common-failure-patterns.md  getting-started-zero-budget.md  hardware-and-networking-deep-dive.md  how-to-read-your-contract-clauses.md  legal-guardrails.md  linux-first-cui-architecture.md  questions-to-ask-your-prime.md  red-flags-when-hiring-msp-or-consultant.md  regulations-and-scoring.md  the-mstechalpine-diagnostic-script.md  which-level-do-i-need.md
program/: README.md  pyproject.toml  requirements.txt
program/bootstrap/: setup_and_run_fleet_commander.ps1  setup_and_run_fleet_commander.sh
program/launcher/: MSTechAlpine-Fleet-Commander-Windows.cmd  MSTechAlpine-Fleet-Commander.command
program/src/mstechalpine_fleet_commander/: __init__.py  __main__.py  _checks.py  _cloud.py  _cloud_api.py  _discovery.py  _fleet.py  _models.py  _report.py  _sbom.py  _utils.py  _vuln.py  cli.py
