[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mstechalpine-fleet-commander"
version = "0.1.0"
description = "MSTechAlpine Fleet Commander diagnostic and evidence tooling"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Jesse Edwards / MSTechAlpine Ventures LLC" }]
dependencies = []

[project.scripts]
fleet-commander = "mstechalpine_fleet_commander.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
